Changelog
=========

1.2 (unreleased)
----------------
- GRTH-51 Creating New AR doesn't function correctly until a refresh
- GRTH-45 Analysis Request: Ugly results interpretation
- GRTH-44 Analysis Request's invoice doesn't look properly
- GRTH-40 Add form analyses don't expand
- GRTH-23 Add Contact to Client throws error
- GRTH-35 Lack of AR invoice (and proforma) formatting
- GRTH-6 Add an acces to Late Analyses
- GRTH-39 graphite.theme 1.1.1 requires 'bika.lims==3.1.7'
- portalMessage rendered twice in setup view
- Graphite Theme doesn't work properly on production mode


1.1 (2015-02-26)
----------------
- GRTH-34 Print invoice doesn't show the invoice to print
- GRTH-4 No doctor, patient, diseases... access in menu bar
- GRTH-30 Overlays don't work
- GRTH-26 Portal instrument alerts not shown
- GRTH-25 After autosave something in AR/view, the notification panel hasn't style.
- GRTH-29 On AR publish, the page is not redirected to the publication preview
- Restyling
- Selective loading of CSS - fix cached CSS malfunctioning
- Left menu removal. Contextual top menu
- Compatibility with Bika LIMS 3.1.7


1.0 (2014-11-06)
----------------
- GRTH-23 Add Contact to Client throws error
- GRTH-19 Error after trying to add an Attachment Type, Batch Labels or Sub-groups
- GRTH-22 When you deactivate the theme by Add-ons, the pages doesn't render well
- GRTH-20 Unable to save a new Invoice
- GRTH-17 Sometimes activate/deactivate on bikasetup/Instrument doesn't work
- GRTH-5 Site Setup becomes strange
- GRTH-2 AR Imports icon not found
- GRTH-15 Import/LoadSetup data is not working
- GRTH-10 The save icon should be something more than simple txt
- GRTH-9 No good construction in Add AR Form

- ON/OFF button to deactivate/activate Grpahite Theme